--- a/p1-2-structure-1.ipynb
+++ b/p1-2-structure-1.ipynb
@@ -72,38 +72,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(3.14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(\"Abbb\")# 请在这里输入代码"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(False)# 请在这里输入代码"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(True)"
    ]
   },
   {
@@ -132,11 +196,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "# 请在这里输入代码\n",
+    "a=12\n",
+    "b=30\n",
+    "f=3.14\n",
+    "s=\"abracadabra\"\n",
+    "l=[1,2,3]\n",
+    "t=True\n",
+    "f=False"
    ]
   },
   {
@@ -148,38 +219,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "# 请在这里输入代码\n",
+    "type(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "# 请在这里输入代码\n",
+    "type(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "# 请在这里输入代码\n",
+    "type(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "# 请在这里输入代码\n",
+    "type(l)"
    ]
   },
   {
@@ -198,11 +317,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "# 请在这里输入代码\n",
+    "del b\n"
    ]
   },
   {
@@ -221,11 +341,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "# 请在这里输入代码\n",
+    "\n",
+    "a,b = 12,30\n"
    ]
   },
   {
@@ -244,11 +366,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "# 请在这里输入代码\n",
+    "g=f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
    ]
   },
   {
